Added more implementation with titledeeds for banker and spaces
* changed banker titledeeds to type board space
* now we can add properties of different types
* tests run
* main run
* skeleton methods in some spaces classes, which is fine